Update cron schedule for StockRobo bot workflow

--- a/.github/workflows/stockrobo_bot.yml
+++ b/.github/workflows/stockrobo_bot.yml
@@ -2,12 +2,21 @@ name: "StockRobo-US01 Phase 2 Bot"
 
 on:
   schedule:
-    # ตั้งเวลารันทุกๆ 6 ชั่วโมง (ปรับเวลาตามต้องการได้ทีหลัง)
-    - cron: '0 */6 * * 1-5'
+    # รอบที่ 1: 21:35 น. (14:35 UTC)
+    - cron: '35 14 * * 1-5'
+    # รอบที่ 2: 23:05 น. (16:05 UTC)
+    - cron: '5 16 * * 1-5'
+    # รอบที่ 3: 00:35 น. (17:35 UTC)
+    - cron: '35 17 * * 1-5'
+    # รอบที่ 4: 02:05 น. (19:05 UTC)
+    - cron: '5 19 * * 1-5'
+    # รอบที่ 5: 03:35 น. (20:35 UTC)
+    - cron: '35 20 * * 1-5'
+  
   workflow_dispatch: # ปุ่มสำหรับกดรันเองด้วยมือ
 
 permissions:
-  contents: write # อนุญาตให้บอทบันทึกข้อมูลกลับเข้า Repo ได้
+  contents: write
 
 jobs:
   run-market-scan:
