Switch to 100% Full-Auto: Auto-scan and Auto-trade on GitHub

--- a/.github/workflows/stockrobo_bot.yml
+++ b/.github/workflows/stockrobo_bot.yml
@@ -1,8 +1,8 @@
-name: "StockRobo-US01 Phase 2 Bot"
+name: "StockRobo-US01 Full-Auto Bot"
 
 on:
   schedule:
-    # รอบที่ 1: 21:35 น. (14:35 UTC)
+    # รอบที่ 1: 21:35 น. (14:35 UTC) - จะสแกนตลาดและเริ่มเทรด
     - cron: '35 14 * * 1-5'
     # รอบที่ 2: 23:05 น. (16:05 UTC)
     - cron: '5 16 * * 1-5'
@@ -13,15 +13,14 @@ on:
     # รอบที่ 5: 03:35 น. (20:35 UTC)
     - cron: '35 20 * * 1-5'
   
-  workflow_dispatch: # ปุ่มสำหรับกดรันเองด้วยมือ
+  workflow_dispatch: # ปุ่มกดรันเอง
 
 permissions:
   contents: write
 
 jobs:
-  run-market-scan:
+  trade:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -36,15 +35,19 @@ jobs:
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Run Phase 2 Bot (Single Pass)
+      - name: 1. Scan Market (500+ Stocks)
+        run: python generate_combined_watchlist.py
+        # ขั้นตอนนี้จะสร้าง data/watchlist.json ใหม่ทุกรอบ
+
+      - name: 2. Execute Trading
         run: python run_phase2_gh_action.py
 
-      - name: Commit and Push Portfolio State
+      - name: 3. Commit and Push Updates (State & Watchlist)
         run: |
-          git config --global user.name "StockRobo Bot"
+          git config --global user.name "StockRobo Full-Auto"
           git config --global user.email "bot@stockrobo.local"
-          git add data/portfolio_state.json || echo "No state file to add"
-          git diff --staged --quiet || git commit -m "Auto-update portfolio state [skip ci]"
+          git add data/portfolio_state.json data/watchlist.json
+          git diff --staged --quiet || git commit -m "Full-Auto Update: Portfolio & Watchlist [skip ci]"
           git diff --staged --quiet || git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
